折りたたみボタン追加
表が複数あるとき、長い表を折り畳めるようにした

--- a/docs/tables.css
+++ b/docs/tables.css
@@ -22,7 +22,7 @@ th {
 .table_unit {
   /*background-color: #eee8d5;/* 背景色を指定する */
   margin: 1em 0em;
-  padding: 10px;
+  padding: 1em 1em 3em 1em;
   box-shadow: 0 0 16px #eee8d5;
 }
 
@@ -40,10 +40,16 @@ textarea, input {
   margin: 0.5em 0.5em;
 }
 
+.table_button, .fold {
+  margin: 0.5em;
+  float: right;
+}
+
 .view {
   display: none;
 }
 
 .title {
   margin: 0.5em 0em;
+  float: left;
 }
